--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,17 +1,35 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// Kaldi logo brand color: #335367b8
+$kaldi-red: #335367b8
+$font-color: white
 
 $primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
-$body-color: #333
+$primary-invert: $font-color
+$body-color: white
 $black: #2b2523
+
+h1, h2, h3, h4, h5, h6
+  color: $font-color !important
 
 .navbar .navbar-menu
   box-shadow:none !important
+  background-color: #112121
+
+
+.navbar
+  background-color: #112121 !important
+
+.navbar-item
+  color: white !important
+
+.navbar-item:hover
+    color: #112121 !important
+
+body
+  background-color: #293c4b
+  color: white
 
 .content .taglist
   list-style: none
@@ -71,26 +89,18 @@ $black: #2b2523
 .margin-top-0
   margin-top: 0 !important
 
-.navbar-item .icon
-  color: $primary
-// Override for use of svg's from https://simpleicons.org/
-.icon svg
-  width: 1.5rem
-  height: 1.5rem
-  fill: currentColor
-.navbar-brand .navbar-item.logo
-  padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
-  background-color: transparent
+  background-color: #112121
 
 //Menu overrides
-$menu-item-color: $white-ter
+$menu-item-color: white
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $font-color
+$menu-item-active-background-color:	$font-color
+$menu-list-border-left: 1px solid $font-color
 $menu-label-color: $white-ter
 
 
@@ -114,7 +124,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #font-color;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
