Add file upload to blog

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -13,7 +13,11 @@ $navbar-background-color: #112121
 $navbar-item-color: white
 $navbar-item-hover-color:  #112121
 $navbar-item-hover-background-color: white
-
+$link: #66b1f3
+$link-hover: #3273dc
+$link-focus: #3273dc
+$link-active: #3273dc
+$link-active-border: #3273dc
 
 $body-color: white
 $strong-color: white
