--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -9,10 +9,11 @@ $scheme-main: #112121
 $text-strong: white
 
 
-$navbar-background-color: #112121
+$navbar-background-color: #112121bf
 $navbar-item-color: white
 $navbar-item-hover-color:  #112121
-$navbar-item-hover-background-color: white
+$navbar-item-hover-background-color: #bdd3e4
+$navbar-item-active-color: gray
 $link: #66b1f3
 $link-hover: #3273dc
 $link-focus: #3273dc
@@ -23,7 +24,13 @@ $body-color: white
 $strong-color: white
 $black: #2b2523
 
+.input, .textarea
+  background-color: white !important
+  color: black !important
 
+.page-wrapper
+  width: 100%
+  overflow: hidden
 
 #nav-toggle-state
   display: none
@@ -33,7 +40,6 @@ $black: #2b2523
 
 body
   background-color: #293c4b
-
 
 footer
   background-color: #293c4b
@@ -98,6 +104,9 @@ footer
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
+.hidden
+  display:none
+
 .margin-top-0
   margin-top: 0 !important
 
@@ -111,9 +120,11 @@ footer.footer
 .menu-label
   font-size: 1em !important
   text-align: left
-.menu-list
+.list li
   list-style: none !important
   text-align: left
+  padding: 0 2em 2em 2em
+
 .social
   padding: 2em
 .social a
@@ -135,6 +146,13 @@ footer.footer
 .blog-list-item .featured-thumbnail
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
+.blog-list-item
+  min-width: 200px;
+
+.tags-list a
+  margin: 0 5px;
+
+
 
 
 @import "~bulma"
@@ -146,16 +164,25 @@ footer.footer
     flex-basis: 50%;
 
 +mobile
+  .navbar
+    background-color: #112121
+  .navbar-menu
+    background-color: #112121
+  a .navbar-item .is-active
+    color: $link
+    background-color: transparent
   .full-width-image
     position:relative
     background-attachment: unset;
     height: 300px;
   .blog-list-item header
     display: block
+  .blog-list-item
+    text-align: center;
   .blog-list-item .featured-thumbnail
     text-align: center;
     max-width: 70%;
-    margin: 0 0 1em;
+    margin: 1em auto 2em auto;
   .is-paddingless-horizontal
     padding-left: 0;
     padding-right: 0;
