fix blog role tag spaceing and nav color

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -165,7 +165,7 @@ footer.footer
 
 +mobile
   .navbar
-    background-color: #112121
+    background-color: transparent !important
   .navbar-menu
     background-color: #112121
   a .navbar-item .is-active
