navbar fix to color

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -165,7 +165,7 @@ footer.footer
 
 +mobile
   .navbar
-    background-color: transparent !important
+    background-color: #112121bf
   .navbar-menu
     background-color: #112121
   a .navbar-item .is-active
